fixed whitespace and buttons related to #17

--- a/style.css
+++ b/style.css
@@ -155,16 +155,21 @@ article .action .comments{
 
 
 .blog_navigation{
-	border-bottom: 1px solid #ccc;
-	padding-bottom: 10px;
+	border-top: 1px solid #ccc;
 }
 
 .previous_article{
-	padding-left: 27px;
+	padding-left: 9px;
 }
 
 .next_article {
 	padding-right: 9px;
+}
+
+.btn-default {
+	color:#333;
+	background-color: none;
+	border:none;
 }
 
 /* Comments */
@@ -173,6 +178,13 @@ article .action .comments{
 	font-size: 20px;
 }
 
+#comments h3{
+	margin-bottom: 50px;
+}
+
+ol.commentlist{
+	list-style-type: none;
+}
 /* jetpack comments doesn't allow for custom css. For that reason we are keeping the form untouched for now. */
 /**
 #respond .form-submit input,
@@ -192,6 +204,7 @@ footer#main{
 	height: 90px;
 	padding-top:30px;
 	margin-top: 10px;
+	margin-top: 40px;
 }
 
 footer#main a, 
@@ -285,7 +298,8 @@ input[type="reset"]{
 /* Comments */
 
 
-ol .commentlist li{
+ol .commentlist li, 
+ul.children li {
 	list-style-type: none;
 }
 
